# kdnssd-avahi

./: INDEX  config.h.in  configure.files  configure.in
kdnssd-avahi/: Makefile.am  README  configure.in.in  domainbrowser.cpp  publicservice.cpp  publicservice.h  query.cpp  remoteservice.cpp  responder.cpp  responder.h  sdevent.h  servicebrowser.cpp
